# syslog-ng-persist

./: CMakeLists.txt  README.md
src/: main.c
